--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,16 @@
     "module": "ESNext",
     "skipLibCheck": true,
 
+    /* Path mode */
+    "baseUrl": "src",
+    "paths": {
+      "components/*": ["components/*"],
+      "pages/*": ["pages/*"],
+      "services/*": ["services/*"],
+      "utils/*": ["utils/*"],
+      "styles/*": ["styles/*"]
+    },
+
     /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
