--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@emotion/is-prop-valid": "^1.2.1",
+    "@reduxjs/toolkit": "^1.9.5",
     "i18next": "^23.4.1",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-localstorage-backend": "^4.1.1",
@@ -19,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.3",
     "react-icons": "^4.10.1",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "styled-components": "^6.0.5",
     "styled-system": "^5.1.5"
