--- a/package.json
+++ b/package.json
@@ -12,20 +12,22 @@
   },
   "dependencies": {
     "@emotion/is-prop-valid": "^1.2.1",
-    "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query-devtools": "^4.36.1",
     "i18next": "^23.4.1",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-localstorage-backend": "^4.1.1",
+    "npm": "^10.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.0.3",
     "react-icons": "^4.10.1",
-    "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "styled-components": "^6.0.5",
     "styled-system": "^5.1.5"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^4.36.1",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/styled-components": "^5.1.26",
