--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/is-prop-valid": "^1.2.1",
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
+    "axios": "^1.5.1",
     "i18next": "^23.4.1",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-localstorage-backend": "^4.1.1",
