--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "baseUrl": "src",
     "paths": {
       "components/*": ["components/*"],
+      "layouts/*": ["layouts/*"],
       "assets/*": ["assets/*"],
       "pages/*": ["pages/*"],
       "services/*": ["services/*"],
