--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
     "@tanstack/react-query": "^4.36.1",
     "@tanstack/react-query-devtools": "^4.36.1",
     "axios": "^1.5.1",
+    "dayjs": "^1.11.10",
     "i18next": "^23.4.1",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-localstorage-backend": "^4.1.1",
+    "moment": "^2.29.4",
     "npm": "^10.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-i18next": "^13.0.3",
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.2",
+    "react-select": "^5.8.0",
     "styled-components": "^6.0.5",
     "styled-system": "^5.1.5"
   },
